--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ line-length = 100
 [tool.pytest.ini_options]
 minversion = "6.0"
 addopts = "--cov stdatm --cov-report term-missing --cov-report html --verbose"
-testpaths = ["src", "tests"]
+testpaths = ["src"]
 norecursedirs = ["dist", "build", ".tox"]
 
 [tool.coverage.run]
