--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,16 +32,13 @@ jobs:
         run: echo "$HOME/.poetry/bin" >> $GITHUB_PATH
         shell: bash
 
-      - uses: actions/cache@v2
-        if: ${{ startsWith(runner.os, 'Linux') }}
-        with:
-          path: ~/.cache/pypoetry
-          key: ${{ runner.os }}-Py${{ matrix.python-version }}-pypoetry-${{ hashFiles('**/poetry.lock') }}
+      - name: Sets unique cache directory for Poetry
+        run: poetry config cache-dir ~/poetry_cache
+        shell: bash
 
       - uses: actions/cache@v2
-        if: ${{ startsWith(runner.os, 'macOS') }}
         with:
-          path: ~/Library/Caches/pypoetry
+          path: ~/poetry_cache
           key: ${{ runner.os }}-Py${{ matrix.python-version }}-pypoetry-${{ hashFiles('**/poetry.lock') }}
 
       - name: Activate environment and install dependencies
