--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,21 @@ authors = [
     "Christophe DAVID <christophe.david@onera.fr>",
 ]
 license = "GPL-3.0-only"
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Environment :: Console",
+    "Intended Audience :: Science/Research",
+    "Intended Audience :: Education",
+    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
+    "Natural Language :: English",
+    "Operating System :: Microsoft :: Windows",
+    "Operating System :: POSIX :: Linux",
+    "Operating System :: MacOS",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Topic :: Scientific/Engineering :: Physics"
+]
 
 packages = [
     { include = "stdatm", from = "src" },
@@ -19,11 +34,11 @@ numpy = "^1.17.3"
 scipy = "^1.4.1"
 
 [tool.poetry.dev-dependencies]
-pytest = "^6.2"
+pytest = "^7.0"
 pytest-cov = "^3.0"
-coverage = { extras = ["toml"], version = "^6.0" }
+coverage = { version = "^6.0", extras = ["toml"] }
 pre-commit = "^2.14.1"
-black = { version = "21.10b0", allow-prereleases = true }
+black = { version = "22.1.0" }
 flake8 = "^4.0.1"
 sphinx = "^4.1.2"
 sphinx-rtd-theme = "^1.0"
