--- a/.github/workflows/watchman_tests.yml
+++ b/.github/workflows/watchman_tests.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Install # installing pytest-cov is needed because of pytest.ini
         run: |
           pip install .
-          pip install pytest pytest-cov nbval
+          pip install pytest pytest-cov pytest-benchmark nbval
         shell: bash
 
       - name: Unit tests
