--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,5 @@
 alabaster==0.7.12 ; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6" or python_version >= "3.6"
-atomicwrites==1.4.0 ; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.4.0"
+atomicwrites==1.4.0 ; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.4.0" or python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") or sys_platform == "win32" and python_version >= "3.6" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") and python_full_version >= "3.4.0"
 attrs==21.2.0 ; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 babel==2.9.1 ; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 backports.entry-points-selectable==1.1.0 ; python_version >= "2.7" and python_full_version >= "3.6.1"
@@ -8,17 +8,18 @@ certifi==2021.10.8 ; python_version >= "3.6" and python_full_version < "3.0.0" o
 cfgv==3.3.1 ; python_full_version >= "3.6.1"
 charset-normalizer==2.0.7 ; python_full_version >= "3.6.0" and python_version >= "3.6"
 click==8.0.3 ; python_version >= "3.6" and python_full_version >= "3.6.2"
-colorama==0.4.4 ; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.5.0" or python_version >= "3.6" and python_full_version >= "3.6.2" and platform_system == "Windows" or python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6") or sys_platform == "win32" and python_version >= "3.6" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6") and python_full_version >= "3.5.0"
+colorama==0.4.4 ; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.5.0" or python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") or sys_platform == "win32" and python_version >= "3.6" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") and python_full_version >= "3.5.0" or python_version >= "3.6" and python_full_version >= "3.6.2" and platform_system == "Windows" or python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6") or sys_platform == "win32" and python_version >= "3.6" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6") and python_full_version >= "3.5.0"
 coverage==6.3.1 ; python_version >= "3.7"
 distlib==0.3.3 ; python_full_version >= "3.6.1"
 docutils==0.17.1 ; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6" or python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 filelock==3.3.2 ; python_version >= "3.6" and python_full_version >= "3.6.1"
 flake8==4.0.1 ; python_version >= "3.6"
+gprof2dot==2021.2.21
 identify==2.3.3 ; python_full_version >= "3.6.1"
 idna==3.3 ; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
 imagesize==1.2.0 ; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
-importlib-metadata==4.2.0 ; python_version < "3.8" and python_version >= "3.6" or python_version < "3.8" and python_full_version >= "3.6.1" and python_version >= "3.6" or python_version >= "3.6" and python_full_version >= "3.6.2" and python_version < "3.8"
-iniconfig==1.1.1 ; python_version >= "3.6"
+importlib-metadata==4.2.0 ; python_version < "3.8" and python_version >= "3.6" or python_version < "3.8" and python_version >= "3.6" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") or python_version < "3.8" and python_full_version >= "3.6.1" and python_version >= "3.6" or python_version >= "3.6" and python_full_version >= "3.6.2" and python_version < "3.8"
+iniconfig==1.1.1 ; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6" or python_version >= "3.6"
 jinja2==3.0.2 ; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6" or python_version >= "3.6"
 latexcodec==2.0.1 ; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 markupsafe==2.0.1 ; python_version >= "3.6"
@@ -26,25 +27,31 @@ mccabe==0.6.1 ; python_version >= "3.6"
 mypy-extensions==0.4.3 ; python_full_version >= "3.6.2"
 nodeenv==1.6.0 ; python_full_version >= "3.6.1"
 numpy==1.21.1 ; python_version >= "3.7"
-packaging==21.2 ; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6" or python_version >= "3.6"
+packaging==21.2 ; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6" or python_version >= "3.6" or python_full_version >= "3.4.0" and python_version >= "3.6"
 pathspec==0.9.0 ; python_full_version >= "3.6.2"
 platformdirs==2.4.0 ; python_version >= "3.6" and python_full_version >= "3.6.2" or python_version >= "3.6" and python_full_version >= "3.6.1"
-pluggy==1.0.0 ; python_version >= "3.6"
+pluggy==1.0.0 ; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6" or python_version >= "3.6"
 pre-commit==2.17.0 ; python_full_version >= "3.6.1"
-py==1.10.0 ; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
+py-cpuinfo==8.0.0 ; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
+py==1.10.0 ; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6" or python_full_version >= "3.5.0" and python_version >= "3.6"
 pybtex-docutils==1.0.1 ; python_version >= "3.6"
 pybtex==0.24.0 ; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
 pycodestyle==2.8.0 ; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 pyflakes==2.4.0 ; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
+pygal==3.0.0 ; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
+pygaljs==1.0.2 ; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 pygments==2.10.0 ; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6" or python_version >= "3.6"
 pyparsing==2.4.7 ; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
+pytest-benchmark==3.4.1 ; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 pytest-cov==3.0.0 ; python_version >= "3.6"
+pytest-profiling==1.7.0
 pytest==7.0.1 ; python_version >= "3.6"
 pytz==2021.3 ; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 pyyaml==6.0 ; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6" or python_version >= "3.6" and python_full_version >= "3.6.1"
 requests==2.26.0 ; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
 scipy==1.6.1 ; python_version >= "3.7"
-six==1.16.0 ; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6" or python_full_version >= "3.6.1" or python_full_version >= "3.4.0" and python_version >= "3.6"
+six==1.16.0 ; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" or python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6" or python_full_version >= "3.6.1" or python_full_version >= "3.4.0" and python_version >= "3.6"
+snakeviz==2.1.1
 snowballstemmer==2.1.0 ; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6" or python_version >= "3.6"
 sphinx-rtd-theme==1.0.0 ; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 sphinx==4.3.2 ; python_version >= "3.6"
@@ -56,9 +63,10 @@ sphinxcontrib-jsmath==1.0.1 ; python_version >= "3.6" and python_full_version < 
 sphinxcontrib-qthelp==1.0.3 ; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6" or python_version >= "3.6"
 sphinxcontrib-serializinghtml==1.1.5 ; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6" or python_version >= "3.6"
 toml==0.10.2 ; python_full_version >= "3.6.1"
-tomli==1.2.2 ; python_version >= "3.7" or python_version >= "3.6" or python_version >= "3.6" and python_full_version >= "3.6.2"
+tomli==1.2.2 ; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6" or python_version >= "3.6" or python_version >= "3.7" or python_version >= "3.6" and python_full_version >= "3.6.2"
+tornado==6.1 ; python_version >= "3.5"
 typed-ast==1.4.3 ; python_version < "3.8" and implementation_name == "cpython" and python_full_version >= "3.6.2"
-typing-extensions==3.10.0.2 ; python_version < "3.8" and python_version >= "3.6" and python_full_version >= "3.6.1" or python_version < "3.8" and python_version >= "3.6" and python_full_version >= "3.6.2" or python_version < "3.10" and python_full_version >= "3.6.2"
+typing-extensions==3.10.0.2 ; python_version < "3.8" and python_version >= "3.6" and python_full_version >= "3.6.1" or python_version < "3.8" and python_version >= "3.6" and python_full_version >= "3.6.1" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") or python_version < "3.8" and python_version >= "3.6" and python_full_version >= "3.6.2" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") or python_version < "3.10" and python_full_version >= "3.6.2"
 urllib3==1.26.7 ; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.6"
 virtualenv==20.10.0 ; python_full_version >= "3.6.1"
-zipp==3.6.0 ; python_version < "3.8" and python_version >= "3.6" and python_full_version >= "3.6.1" or python_version < "3.8" and python_version >= "3.6" and python_full_version >= "3.6.2"
+zipp==3.6.0 ; python_version < "3.8" and python_version >= "3.6" and python_full_version >= "3.6.1" or python_version < "3.8" and python_version >= "3.6" and python_full_version >= "3.6.1" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") or python_version < "3.8" and python_version >= "3.6" and python_full_version >= "3.6.2" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6")
