--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,9 @@ flake8 = "^4.0.1"
 sphinx = "^4.1.2"
 sphinx-rtd-theme = "^1.0"
 sphinxcontrib-bibtex = "^2.3.0"
+pytest-profiling = "^1.7.0"
+snakeviz = "^2.1.1"
+pytest-benchmark = { version = "^3.4.1", extras = ["histogram"] }
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -53,7 +56,7 @@ line-length = 100
 
 [tool.pytest.ini_options]
 minversion = "6.0"
-addopts = "--cov stdatm --cov-report term-missing --cov-report html --verbose"
+addopts = "--cov stdatm --cov-report term-missing --cov-report html --verbose --benchmark-disable --benchmark-autosave"
 testpaths = ["src"]
 norecursedirs = ["dist", "build", ".tox"]
 
