--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -1,4 +1,4 @@
-name: Build PyPI package and Binder image
+name: Build and publish PyPI package
 
 on:
   release:
@@ -59,8 +59,6 @@ jobs:
 
       - name: publish to PyPI
         env:
-          TOKEN: ${{ secrets.PyPI }} # do not use the secret directly in run command, it would
-          # write it plainly in the log
+          POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PyPI }} # do not use the secret directly in run command, it would write it plainly in the log
         run: |
-          poetry config pypi-token.pypi "$TOKEN"
           poetry publish
