--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,19 +33,25 @@ python = "^3.7"
 numpy = "^1.17.3"
 scipy = "^1.4.1"
 
-[tool.poetry.dev-dependencies]
-pytest = "^7.0"
-pytest-cov = "^3.0"
-coverage = { version = "^6.0", extras = ["toml"] }
-pre-commit = "^2.14.1"
-black = { version = "22.1.0" }
-flake8 = "^4.0.1"
-sphinx = "^4.1.2"
-sphinx-rtd-theme = "^1.0"
-sphinxcontrib-bibtex = "^2.3.0"
+[tool.poetry.group.dev.dependencies]
 pytest-profiling = "^1.7.0"
 snakeviz = "^2.1.1"
 pytest-benchmark = { version = "^3.4.1", extras = ["histogram"] }
+
+[tool.poetry.group.test.dependencies]
+pytest = "^7.0, <7.2.0"
+pytest-cov = "^3.0"
+coverage = { version = "^6.0", extras = ["toml"] }
+
+[tool.poetry.group.doc.dependencies]
+sphinx = "^4.1.2"
+sphinx-rtd-theme = "^1.0"
+sphinxcontrib-bibtex = "^2.3.0"
+
+[tool.poetry.group.lint.dependencies]
+pre-commit = "^2.14.1"
+black = { version = "22.1.0" }
+flake8 = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
