--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -1,11 +1,13 @@
-name: Build and publish PyPI package
+name: Build PyPI package
 
 on:
+  workflow_dispatch:
+  workflow_call:
   release:
     types: [ published ]
 
 jobs:
-  delete-tag:
+  move-tag:
     runs-on: ubuntu-latest
     steps:
       - name: Move tag
@@ -39,26 +41,27 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
 
       - name: Install Poetry
-        run: curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python
+        run: |
+          pipx install poetry==${{ vars.POETRY_VERSION }}
+          pipx inject poetry poetry-dynamic-versioning[plugin]
         shell: bash
 
       - name: Poetry path
         run: echo "$HOME/.poetry/bin" >> $GITHUB_PATH
         shell: bash
 
-      - name: Set version and build
-        run: |
-          poetry version $( echo ${{ github.ref }} | sed 's%refs/tags/%%' )
-          poetry build
+      - name: Build StdAtm
+        run: poetry build
         shell: bash
 
       - name: publish to PyPI
         env:
-          POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PyPI }} # do not use the secret directly in run command, it would write it plainly in the log
+          TOKEN: ${{ secrets.PyPI }} # do not use the secret directly in run command, it would write it plainly in the log
         run: |
+          poetry config pypi-token.pypi "$TOKEN"
           poetry publish
