--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,12 +1,13 @@
 name: Tests
 
 on:
+  workflow_dispatch:
+  workflow_call:
   push:
     branches:
       - '**'
     tags-ignore:
       - '**'
-
 
 jobs:
   tests:
@@ -14,36 +15,24 @@ jobs:
     if: ${{ !contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, '[skip ci]') }}
     strategy:
       matrix:
-        python-version: [ 3.7, 3.8, 3.9 ]
+        python-version: [ 3.7, 3.9 ]
         os: [ ubuntu-latest, windows-latest, macos-latest ]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+
+      - name: Install poetry
+        run: pipx install poetry==${{ vars.POETRY_VERSION }}
+
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-
-      - name: Install Poetry
-        run: curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python
-        shell: bash
-
-      - name: Poetry path
-        run: echo "$HOME/.poetry/bin" >> $GITHUB_PATH
-        shell: bash
-
-      - name: Sets unique cache directory for Poetry
-        run: poetry config cache-dir ~/poetry_cache
-        shell: bash
-
-      - uses: actions/cache@v2
-        with:
-          path: ~/poetry_cache
-          key: ${{ runner.os }}-Py${{ matrix.python-version }}-pypoetry-${{ hashFiles('**/poetry.lock') }}
-
+          cache: 'poetry'
       - name: Activate environment and install dependencies
-        run: poetry install
-        shell: bash
+        run: |
+          poetry env use ${{ matrix.python-version }}
+          poetry install
 
       - name: Check with Black
         run: |
@@ -58,7 +47,7 @@ jobs:
         shell: bash
 
       - name: Publish code coverage on Code Climate
-        uses: paambaati/codeclimate-action@v3.0.0
-        if: ${{ runner.os == 'Linux' && matrix.python-version == '3.8' }} # This action runs only on Linux
+        uses: paambaati/codeclimate-action@v3.2.0
+        if: ${{ runner.os == 'Linux' && matrix.python-version == '3.9' }} # This action runs only on Linux
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.codeclimate }}
