--- a/.github/workflows/watchman_tests.yml
+++ b/.github/workflows/watchman_tests.yml
@@ -1,37 +1,51 @@
 name: Watchman Tests
 # This workflow will run tests with an up-to-date production environment instead
 # of the locked one.
-# It will warn developers if the update of a dependency broke something.
+# It will warn developers if any update of a dependency broke something.
 
 on:
+  workflow_dispatch:
+  workflow_call:
   push:
-    branches:
-      - '**'
-    tags-ignore:
-      - '**'
+    branches: [ main ]
+  pull_request:
+    # The branches below must be a subset of the branches above
+    branches: [ main ]
+  schedule:
+    - cron: '23 3 * * *'
 
 
 jobs:
   tests:
     runs-on: ${{ matrix.os }}
-    if: ${{ !contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, '[skip ci]') }}
     strategy:
       matrix:
         python-version: [ 3.9 ]
         os: [ ubuntu-latest, windows-latest, macos-latest ]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install # installing pytest-cov is needed because of pytest.ini
+      - name: Install
+        # Installing pytest-cov is needed because of pytest configuration.
         run: |
           pip install .
-          pip install pytest pytest-cov pytest-benchmark nbval
+          pip install pytest pytest-cov pytest-benchmark
         shell: bash
+
+      - name: List installed packages
+        # List packages and versions for postmortem analysis.
+        run: pip list --format=freeze | tee requirements.txt
+        shell: bash
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: pip package list
+          path: requirements.txt
 
       - name: Unit tests
         run: pytest --no-cov src
