Updated CodeClimate conf

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,5 +1,8 @@
 plugins:
   pylint:
     enabled: true
+    checks:
+      bad-continuation:
+        enabled: false
   sonar-python:
     enabled: true
