--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,22 +1,19 @@
 repos:
   - repo: local
     hooks:
-
       - id: black
         name: black
         language: system
         entry: black
         types: [ python ]
-
       - id: flake8
         name: flake8
         language: system
         entry: flake8
         types: [ python ]
-
       - id: sync_doc_requirements
         name: sync_doc_requirements
         entry: poetry export --with doc --without-hashes -o docs/requirements.txt -f requirements.txt
-        language: python
+        language: system
         pass_filenames: false
         files: 'poetry.lock'
