--- a/.github/workflows/watchman_tests.yml
+++ b/.github/workflows/watchman_tests.yml
@@ -48,5 +48,5 @@ jobs:
           path: requirements.txt
 
       - name: Unit tests
-        run: pytest --no-cov src
+        run: pytest src
         shell: bash
