--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,10 +41,10 @@ jobs:
           poetry env use ${{ matrix.python-version }}
           poetry install
 
-      - name: Check with Black
+      - name: Check with Ruff
         run: |
-          # Fails if Black format is not respected
-          poetry run black --check .
+          # Fails if Ruff format is not respected
+          poetry run ruff format --check .
         shell: bash
 
       - name: Unit tests
