--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,8 +60,7 @@ sphinxcontrib-bibtex = "^2.3.0"
 
 [tool.poetry.group.lint.dependencies]
 pre-commit = "^2.14.1"
-black = { version = "23.3.0" }
-flake8 = "^4.0.1"
+ruff = "0.4.9"
 
 [tool.poetry-dynamic-versioning]
 enable = true
@@ -72,7 +71,7 @@ style = "semver"
 requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
 build-backend = "poetry_dynamic_versioning.backend"
 
-[tool.black]
+[tool.ruff]
 line-length = 100
 
 [tool.pytest.ini_options]
