Updated pyproject.toml with homepage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,7 @@
 [tool.poetry]
 name = "stdatm"
 version = "0.0.0"
+homepage = "https://github.com/fast-aircraft-design/StdAtm"
 description = "Numpy-oriented Standard Atmosphere model"
 readme = "README.md"
 authors = [
